correccion de tipeo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<div class="inner">
 									<h2>Landing page con boton de Mercado Pago</h2>
 									<p>Sitio web a pedido, para una emprendedora Community Manager, donde utilice Html5, Css, JavaScript y Bootstrap. Ademas inserte un boton de Mercado Pago para que que pueda ofrecer sus servicios y
-										prodcutos.
+										productos.
 										</p>
 									<ul class="actions">
 										<li><a href="https://cubillasg.github.io/Modern.Desing/" target="new" class="button">Ver proyecto</a></li>
